--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
+    "@nuxtjs/tailwindcss": "^6.11.4",
     "nuxt": "^3.10.2",
     "vue": "^3.4.5",
     "vue-router": "^4.2.5"
