--- a/package.json
+++ b/package.json
@@ -24,7 +24,10 @@
     "nuxt": "^3.10.2",
     "nuxt-lucide-icons": "^1.0.3",
     "prettier": "^3.2.5",
+    "sharp": "^0.33.2",
+    "svgo": "^3.2.0",
     "typescript": "^5.3.3",
+    "vite-plugin-image-optimizer": "^1.1.7",
     "vue": "^3.4.5",
     "vue-router": "^4.2.5"
   }
