--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "eslint-plugin-prettier": "^5.1.3",
     "nuxt": "^3.10.2",
     "nuxt-lucide-icons": "^1.0.3",
+    "nuxt-swiper": "^1.2.2",
+    "pathe": "^1.1.2",
     "prettier": "^3.2.5",
     "sharp": "^0.33.2",
     "svgo": "^3.2.0",
