--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "nuxt": "^3.10.2",
+    "nuxt-cloudflare-analytics": "^1.0.8",
     "nuxt-lucide-icons": "^1.0.3",
     "nuxt-swiper": "^1.2.2",
     "pathe": "^1.1.2",
