--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "website-classic-sportscar-centre",
-  "private": true,
+  "private": false,
   "type": "module",
   "scripts": {
     "build": "nuxt build",
@@ -18,14 +18,14 @@
     "@nuxtjs/i18n": "^8.1.1",
     "@nuxtjs/seo": "^2.0.0-rc.8",
     "@nuxtjs/tailwindcss": "^6.11.4",
-    "@typescript-eslint/eslint-plugin": "^7.0.1",
-    "@typescript-eslint/parser": "^7.0.1",
+    "@typescript-eslint/eslint-plugin": "^7.0.2",
+    "@typescript-eslint/parser": "^7.0.2",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "nuxt": "^3.10.2",
     "nuxt-cloudflare-analytics": "^1.0.8",
-    "nuxt-lucide-icons": "^1.0.3",
+    "nuxt-lucide-icons": "^1.0.4",
     "nuxt-swiper": "^1.2.2",
     "pathe": "^1.1.2",
     "prettier": "^3.2.5",
