--- a/package.json
+++ b/package.json
@@ -15,25 +15,25 @@
   },
   "devDependencies": {
     "@nuxt/eslint-config": "^0.2.0",
-    "@nuxtjs/i18n": "^8.5.4",
-    "@nuxtjs/seo": "^2.0.0-rc.8",
-    "@nuxtjs/tailwindcss": "^6.12.1",
+    "@nuxtjs/i18n": "^8.5.6",
+    "@nuxtjs/seo": "^2.2.0",
+    "@nuxtjs/tailwindcss": "^6.13.2",
     "@typescript-eslint/eslint-plugin": "^7.18.0",
     "@typescript-eslint/parser": "^7.18.0",
     "eslint": "^8.57.1",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.2.1",
-    "nuxt": "^3.13.2",
+    "eslint-plugin-prettier": "^5.2.3",
+    "nuxt": "^3.16.0",
     "nuxt-cloudflare-analytics": "^1.0.8",
     "nuxt-lucide-icons": "^1.0.5",
     "nuxt-swiper": "^1.2.2",
     "pathe": "^1.1.2",
-    "prettier": "^3.3.3",
+    "prettier": "^3.5.3",
     "sharp": "^0.33.5",
     "svgo": "^3.3.2",
-    "typescript": "^5.6.2",
+    "typescript": "^5.8.2",
     "vite-plugin-image-optimizer": "^1.1.8",
     "vue": "^3.4.5",
-    "vue-router": "^4.4.5"
+    "vue-router": "^4.5.0"
   }
 }
