--- a/package.json
+++ b/package.json
@@ -14,26 +14,26 @@
     "fix": "prettier --write --list-different . && npm run lint:js -- --fix"
   },
   "devDependencies": {
-    "@nuxt/eslint-config": "^0.2.0",
-    "@nuxtjs/i18n": "^8.5.6",
-    "@nuxtjs/seo": "^2.2.0",
-    "@nuxtjs/tailwindcss": "^6.13.2",
-    "@typescript-eslint/eslint-plugin": "^7.18.0",
-    "@typescript-eslint/parser": "^7.18.0",
-    "eslint": "^8.57.1",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.2.3",
-    "nuxt": "^3.16.0",
+    "@nuxt/eslint-config": "^1.4.1",
+    "@nuxtjs/i18n": "^9.5.5",
+    "@nuxtjs/seo": "^3.0.3",
+    "@nuxtjs/tailwindcss": "^7.0.0-beta.0",
+    "@typescript-eslint/eslint-plugin": "^8.34.0",
+    "@typescript-eslint/parser": "^8.34.0",
+    "eslint": "^9.28.0",
+    "eslint-config-prettier": "^10.1.5",
+    "eslint-plugin-prettier": "^5.4.1",
+    "nuxt": "^3.17.5",
     "nuxt-cloudflare-analytics": "^1.0.8",
     "nuxt-lucide-icons": "^1.0.5",
-    "nuxt-swiper": "^1.2.2",
-    "pathe": "^1.1.2",
+    "nuxt-swiper": "^2.0.1",
+    "pathe": "^2.0.3",
     "prettier": "^3.5.3",
-    "sharp": "^0.33.5",
+    "sharp": "^0.34.2",
     "svgo": "^3.3.2",
-    "typescript": "^5.8.2",
+    "typescript": "^5.8.3",
     "vite-plugin-image-optimizer": "^1.1.8",
     "vue": "^3.4.5",
-    "vue-router": "^4.5.0"
+    "vue-router": "^4.5.1"
   }
 }
